CAL-1358 Fix the broken UI if the name of an attached file is too long

--- a/calendar-webapp/src/main/webapp/vue-app/css/ExoEventForm.less
+++ b/calendar-webapp/src/main/webapp/vue-app/css/ExoEventForm.less
@@ -174,15 +174,11 @@
   font-weight: bold;
 }
 
-.drawer .fileDrop .uploadContainer .file .info {
-  width: 230px;
-}
-
 .drawer .fileDrop .uploadContainer .fileNameLabel {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 150px;
+  max-width: 345px;
 }
 
 .drawer .fileDrop .uploadContainer .file {
